Some animation funcs Note: cards z-index

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         success: function(result){
                             $('#res').html(result.answer);
                         },
-                        error: function(result){
-                            $('#res').html(result);
+                        error: function(){
+                            $('#res').html("error");
                         },
                     });
                 });
